--- a/src/assets/scss/layout/_fixed_vote.scss
+++ b/src/assets/scss/layout/_fixed_vote.scss
@@ -13,16 +13,10 @@
     background-position: center center;
     @media (max-width:768px) {
         background-image: url("/src/assets/images/fixedvote/fixedvote_ph.svg");
-        bottom: 30vh;
-        right: -3.4vw;
-        width: 25vw;
-        height: 20vh;
-    }
-    @media (max-width:660px) {
+        top: 70vw;
         right: -2vw;
-    }
-    @media (max-width:550px) {
-        right: 0vw;
+        width: 25vw;
+        height: 25vw;
     }
     a{
         text-decoration: none;
@@ -32,18 +26,12 @@
         position: absolute;
         top: 3.2vw;
         left: 2.2vw;
-        @media (max-width:768px) {
-            font-size: 18px;
-        }
     }
 
     .fixed_bottom{
         position: absolute;
         top: 8.1vw;
         left: 2.5vw;
-        @media (max-width:768px) {
-            font-size: 18px;
-        }
     }
 
     .fixed_pc{
@@ -51,46 +39,35 @@
             display: none;
         }
     }
+
     .fixed_ph{
         position: absolute;
-        bottom: 5%;
-        left: 25%;
+        bottom: 0;
+        left: 0;
         @media (min-width:769px) {
             display: none;   
         }
-        @media (max-width:550px) {
-            left: 18%; 
+        @media (max-width:768px) {
+            transform: translate(5vw,-2.5vw);
         }
-        @media (max-width:470px) {
-            left: 10%;
-            bottom:9%;
+        @media (max-width:650px) {
+            transform: translate(4vw,-2vw);
         }
-        @media (max-width:450px) {
-            line-height: normal;
-            left: 12%;
-            bottom:14%;
+        @media (max-width:580px) {
+            transform: translate(3.5vw,-1vw);
+            font-size: 18px;
         }
-        @media (max-width:430px) {
-            left: 10%;
-            bottom:20%;
-        }
-        @media (max-width:425px) {
-            left: 8%;
-            bottom:15%;
+        @media (max-width:500px) {
+            transform: translate(3.5vw,-1vw);
+            font-size: 15px;
         }
         @media (max-width:414px) {
-            left: 8%;
-            bottom:20%;
-        }
-        @media (max-width:400px) {
+            transform: translate(3vw,-1.5vw);
             font-size: 14px;
-            left: 10%;
-            bottom:20%;
         }
         @media (max-width:375px) {
-            font-size: 14px;
-            left: 10%;
-            bottom:15%;
+            transform: translate(3vw,-1.5vw);
+            font-size: 12px;
         }
     }
 
